--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>ropod_sim_model</build_depend>
-  <exec_depend>ropod_sim_model</exec_depend>
+  <!-- <build_depend>ropod_sim_model</build_depend> -->
+  <!-- <exec_depend>ropod_sim_model</exec_depend> -->
 
   <export>
   </export>
