--- a/ros/config/global_costmap_test.yaml
+++ b/ros/config/global_costmap_test.yaml
@@ -12,8 +12,9 @@ min_obstacle_height: 0.0
 footprint: [[-0.33, 0.33], [0.33, 0.33], [0.33, -0.33], [-0.33, -0.33]]
 
 # inflation layer
-inflation_radius: 1.0
-cost_scaling_factor: 5.0
+inflation_layer:
+    inflation_radius: 0.1
+    cost_scaling_factor: 5.0
 
 # obstacle layer
 max_obstacle_height: 2.0
