--- a/ros/config/ropod_sim/vec_field_nav_params.yaml
+++ b/ros/config/ropod_sim/vec_field_nav_params.yaml
@@ -33,12 +33,11 @@ strict:
     allow_backward_motion: False
     # tolerances
     heading_tolerance: 1.5
-    goal_dist_tolerance: 0.1
+    goal_dist_tolerance: 0.3
     goal_theta_tolerance: 0.1
     latch_xy_goal: True
     waypoint_goal_tolerance: 0.3
     goal_path_start_point_tolerance: 1.0
-    forward_safety_dist: 0.1
     footprint_padding: 0.02
 
     # controller params
@@ -48,8 +47,11 @@ strict:
     p_linear: 1.0
     max_theta_vel: 0.5
     min_theta_vel: 0.1
-    max_linear_vel: 0.3
+    max_linear_vel: 0.5
     min_linear_vel: 0.1
-    max_linear_acc: 0.5
+    max_linear_acc: 0.3
     max_angular_acc: 0.5
     future_pos_lookahead_time: 5.0
+    safety_dist: 0.45
+    neighbourhood_dist: 1.0
+    neighbourhood_pts_threshold: 3
